# vibe-loop

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  PLAN.md  PROMPT.md  README.md  REVIEW.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: PLAN.md  deterministic-run-orchestration.md  external-benchmark-fit.md  generated-task-discovery.md  parallel-worker-orchestration.md  planning-analytics.md  release-checklist.md  skill-eval-demo-projects.md  skill-eval-schema.md  skill-evaluation-strategy.md  skill-work-modes.md
docs/examples/: release-readiness-dry-run.json  swe-bench-pro-smoke-summary.json
docs/prd/: README.md  autopilot.md  cli-runtime.md  evals-release.md  planning-analytics.md  run-orchestration.md  skills.md  spec-driven-execution.md  task-discovery.md  worker-supervision.md
eval/benchmarks/: swe-rebench-v2-smoke.json
eval/examples/local-demo-v1/: README.md  manifest.json
scripts/hooks/: pre-commit  pre-push
src/vibe_loop/: __init__.py  __main__.py  activity.py  autopilot.py  cli.py  config.py  eval_benchmark.py  eval_benchmark_manifest.py  eval_benchmark_stub.py  eval_benchmark_swe_rebench.py  eval_example_grader.py  eval_examples.py  eval_release.py  eval_reporting.py  eval_runner.py  evals.py  generated_discovery.py  generated_profiles.py  locks.py  orchestration.py  planning_artifacts.py  planning_benchmark.py  planning_evidence.py  planning_timeline.py  processes.py  retry.py  runner.py  runs.py  runtime_events.py  skills.py  spec_diagnostics.py  task_views.py  tasks.py  telemetry.py  tui.py  webui.py  workers.py
src/vibe_loop/skills/autopilot/: SKILL.md
src/vibe_loop/skills/infinite-vibe-loop/: SKILL.md
src/vibe_loop/skills/orchestrated-vibe-loop/: SKILL.md
tests/: __init__.py  test_activity.py  test_autopilot.py  test_cli.py  test_config.py  test_eval_benchmark.py  test_eval_benchmark_swe_rebench.py  test_eval_examples.py  test_eval_release.py  test_eval_runner.py  test_evals.py  test_generated_discovery.py  test_locks.py  test_orchestration.py  test_plan_board_drift.py  test_planning_benchmark.py  test_planning_evidence.py  test_planning_timeline.py  test_processes.py  test_project_binding.py  test_retry.py  test_runner.py  test_runs.py  test_runtime_events.py  test_tasks.py  test_telemetry.py  test_tui.py  test_webui.py  test_workers.py
tests/fixtures/: ralphex-plan.md
tests/fixtures/eval/: aggregate-negative-pass.json  skill-quality-records.json
tests/fixtures/provider_usage/: claude-limit-wall.json  claude-malformed.json  claude-missing.json  claude-no-cache.json  claude-present.json  codex-limit-wall.json  codex-malformed.json  codex-missing.json  codex-present.json  codex-quota-first.json  codex-quota-malformed.json  codex-quota-reset-change.json  codex-quota-second.json  legacy-malformed-attribution.json  quota-reset-jitter-cases.json
tests/fixtures/spec-driven/: kiro-tasks.md  openspec-tasks.md  spec-kit-tasks.md
tests/fixtures/worker_activity/: claude-stream.jsonl  codex-stream.jsonl
tools/: check_plan_board_drift.py
(+221 files in other folders)
